# classroom-reservation

./: CLAUDE.md  README.md  REQUIREMENTS.md  docker-compose.yml  package-lock.json  set-user-id.sh
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_14_1552-833ab3906f70_first_migration.py  2026_03_14_1713-6dac63b81854_first_migration.py  2026_04_08_0113-4256b7d7b301_first_migration.py  2026_04_18_1749-9cfd88748d73_ajustando_schemas.py  2026_04_23_2353-89e39e5aaa73_ajustes.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/modules/audit/: models.py  router.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/environments/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/governance/: models.py  (+1 more)
backend/app/shared/: enums.py
backend/core/: config.py  database.py  jwt_bearer.py  jwt_handler.py  utils.py
backend/models/: __init__.py  database_models.py  mixins.py  purpose_model.py  resource_model.py  room.py  room_model.py  room_purpose_model.py  room_resource_model.py  user.py  user_model.py
backend/repositories/: purpose_repository.py  resource_repository.py  room_purpose_repository.py  room_repository.py  room_resource_repository.py  user_repository.py
backend/routers/: auth.py  purposes.py  resources.py  rooms.py  users.py
backend/schemas/: __init__.py  purpose.py  resource.py  room.py  user.py
(+79 files in other folders)
